--- a/DATA301Project.Rmd
+++ b/DATA301Project.Rmd
@@ -23,6 +23,8 @@ library(plotly)
 library(shiny)
 library(ggplot2)
 library(shinyjs)
+library(lubridate)
+
 ```
 
 ```{r}
@@ -38,48 +40,160 @@ temp <- full_join(temp4, temp3)
 
 ## Individual Contributions
 ```{r}
-#Histogram and Density Plot
+#when you run this code it might say error instead of displaying the graph/plot, just wait a little bit and it should correct itself (you will need to wait a little bit when applying filters and switching tabs to another plot, they will all say an error at first but disappear after a few seconds and the plot is displayed)
+
+get_season <- function(date) {
+  #convert date to a format that can be used for comparison
+  md <- format(ymd(date), "%m-%d")
+  
+  case_when(
+    md >= "12-01" | md <= "02-28" ~ "Summer",
+    md >= "03-01" & md <= "05-31" ~ "Autumn",
+    md >= "06-01" & md <= "08-31" ~ "Winter",
+    md >= "09-01" & md <= "11-30" ~ "Spring",
+    TRUE ~ NA_character_
+  )
+}
+
+#add season column to the dataset
+temp <- temp %>%
+  mutate(season = get_season(date),
+         year = year(ymd(date)))  #adding a year column for time-based analysis
+
+
 ui <- fluidPage(
   useShinyjs(), #use shinyJS to implement javascript so that interactive and dynamic UI elements can be added to the Shiny app
   titlePanel("Temperature Data Analysis"),
-  sidebarLayout(
-    sidebarPanel(
-      #inputs
-      #histogram section label
-      h4("Histogram"),
-      
-      #histogram inputs
-      radioButtons("plot_type", "Plot Type:",
-                   choices = c("Histogram" = "histogram", "Density Plot" = "density")),
-      
-      #overlay density plot checkbox with help text
-      tagList(
-        checkboxInput("overlay", "Overlay Density Plot on Histogram", value = FALSE),
-        helpText("Note: Histogram must be selected as the plot type for the density overlay to work.")
-      ),
-      
-      sliderInput("binwidth", "Bin Width:", min = 1, max = 5, value = 1),
-      selectInput("site", "Select Site:", choices = c("All Sites", unique(temp$site))),
-      
-      hr(),  #separate the different plot sections
-      
-      #boxplot section label
-      h4("Boxplot"),
-      
-      #boxplot inputs
-      selectInput("comparison_type", "Comparison Type:",
-                  choices = c("All Sites" = "all", "Compare Sites" = "compare")),
-      uiOutput("comparison_sites_ui"),
-      uiOutput("add_site_ui")  #dynamic UI for add site button
-    ),
-    mainPanel(
-      plotlyOutput("distPlot", height = "700px"), 
-      plotlyOutput("boxPlot", height = "600px")   
-    )
+  
+  #tabbed layout
+  tabsetPanel(
+    tabPanel("Histogram/Density Plot",
+             sidebarLayout(
+               sidebarPanel(
+                 #inputs
+                 
+                 #statistic selection
+                 selectInput("statistic", "Select Statistic:", 
+                             choices = unique(temp$statistic), selected = "Average"),
+                 
+                 #year selection
+                 selectInput("year_type", "Select Year(s):",
+                             choices = c("Individual Years", "Year Range"),
+                             selected = "Year Range"),
+                 
+                 uiOutput("individual_year_ui"),
+                 
+                 uiOutput("year_range_ui"),
+                 
+                 #season selection
+                 selectInput("season", "Select Season:",
+                             choices = c("All", "Summer", "Autumn", "Winter", "Spring")),
+                 
+                 #histogram section label
+                 h4("Histogram"),
+                 
+                 #histogram inputs
+                 radioButtons("plot_type", "Plot Type:",
+                              choices = c("Histogram" = "histogram", "Density Plot" = "density")),
+                 
+                 #overlay density plot checkbox and help text
+                 tagList(
+                   checkboxInput("overlay", "Overlay Density Plot on Histogram", value = FALSE),
+                   helpText("Note: Histogram must be selected as the plot type for the density overlay to work.")
+                 ),
+                 
+                 sliderInput("binwidth", "Bin Width:", min = 1, max = 5, value = 1),
+                 selectInput("site", "Select Site:", choices = c("All Sites", unique(temp$site)))
+               ),
+               mainPanel(
+                 plotlyOutput("distPlot", height = "700px")
+               )
+             )),
+    
+    tabPanel("Boxplot",
+         sidebarLayout(
+           sidebarPanel(
+             #boxplot section label
+             h4("Boxplot"),
+             
+             #statistic selection
+             selectInput("box_statistic", "Select Statistic:", 
+                         choices = unique(temp$statistic), selected = "Average"),
+             
+             #year selection
+             selectInput("box_year_type", "Select Year(s):",
+                         choices = c("Individual Years", "Year Range"),
+                         selected = "Year Range"),
+             
+             uiOutput("box_individual_year_ui"),
+             
+             uiOutput("box_year_range_ui"),
+             
+             #season selection
+             selectInput("box_season", "Select Season:",
+                         choices = c("All", "Summer", "Autumn", "Winter", "Spring")),
+             
+             #boxplot inputs
+             selectInput("comparison_type", "Comparison Type:",
+                         choices = c("All Sites" = "all", "Compare Sites" = "compare")),
+             uiOutput("comparison_sites_ui"),
+             uiOutput("add_site_ui")  #dynamic UI for add site button
+           ),
+           mainPanel(
+             plotlyOutput("boxPlot", height = "700px")
+           )
+         )),
+    
+    tabPanel("Correlation Matrix",
+             sidebarLayout(
+               sidebarPanel(
+                 h4("Correlation Matrix"),
+                 
+                 #statistic selection
+                 selectInput("cor_statistic", "Select Statistic:", 
+                             choices = unique(temp$statistic), selected = "Average"),
+                 
+                 #year selection
+                 selectInput("cor_year_type", "Select Year(s):",
+                             choices = c("Individual Years", "Year Range"),
+                             selected = "Year Range"),
+                 
+                 uiOutput("cor_individual_year_ui"),
+                 
+                 uiOutput("cor_year_range_ui"),
+                 
+                 #season selection
+                 selectInput("cor_season", "Select Season:",
+                             choices = c("All", "Summer", "Autumn", "Winter", "Spring")),
+                 
+                 #correlation method selection
+                 radioButtons("cor_method", "Correlation Method:",
+                              choices = c("Pearson" = "pearson", 
+                                          "Spearman" = "spearman", 
+                                          "Kendall" = "kendall"),
+                              selected = "pearson"),
+                 
+                 #display options for correlation matrix
+                 checkboxInput("show_values", "Show Correlation Coefficients", value = TRUE),
+                 sliderInput("cor_threshold", "Correlation Threshold:", min = 0, max = 1, value = 0, step = 0.1),
+                 
+                 #color scheme selection
+                 selectInput("color_scheme", "Color Scheme:",
+                             choices = c("Blue-Red" = "RdBu", 
+                                         "Greens" = "Greens", 
+                                         "Blues" = "Blues"),
+                             selected = "RdBu")
+               ),
+               mainPanel(
+                 plotlyOutput("corMatrixPlot", height = "700px")  #correlation matrix plot output
+               )
+             ))
   )
 )
 
+
 server <- function(input, output, session) {
+  
   #reactive values to keep track of number of sites to compare
   rv <- reactiveValues(num_sites = 1) #default to 1 site
   
@@ -89,7 +203,7 @@ server <- function(input, output, session) {
     }
   })
   
-  #preserve selected sites when adding a new site, so that the selections dont reset when you press "+"
+  #preserve selected sites when adding a new site, so that the selections don't reset when you press "+"
   observe({
     for (i in seq_len(rv$num_sites)) {
       if (!is.null(input[[paste0("site", i)]])) {
@@ -116,19 +230,87 @@ server <- function(input, output, session) {
     }
   })
   
-  output$distPlot <- renderPlotly({
-    filtered_data <- if (input$site == "All Sites") {
-      temp
+  #show or hide UI elements based on year selection type
+  output$individual_year_ui <- renderUI({
+    if (input$year_type == "Individual Years") {
+      selectInput("year", "Select Year(s):", choices = unique(temp$year), multiple = TRUE)
     } else {
-      temp %>% filter(site == input$site)
+      NULL
+    }
+  })
+  
+  output$year_range_ui <- renderUI({
+    if (input$year_type == "Year Range") {
+      sliderInput("year_range", "Select Year Range:", min = min(temp$year), max = max(temp$year),
+                  value = c(min(temp$year), max(temp$year)), step = 1)
+    } else {
+      NULL
+    }
+  })
+  
+  output$box_individual_year_ui <- renderUI({
+    if (input$box_year_type == "Individual Years") {
+      selectInput("box_year", "Select Year(s):", choices = unique(temp$year), multiple = TRUE)
+    } else {
+      NULL
+    }
+  })
+  
+  output$box_year_range_ui <- renderUI({
+    if (input$box_year_type == "Year Range") {
+      sliderInput("box_year_range", "Select Year Range:", min = min(temp$year), max = max(temp$year),
+                  value = c(min(temp$year), max(temp$year)), step = 1)
+    } else {
+      NULL
+    }
+  })
+  
+  output$cor_individual_year_ui <- renderUI({
+    if (input$cor_year_type == "Individual Years") {
+      selectInput("cor_year", "Select Year(s):", choices = unique(temp$year), multiple = TRUE)
+    } else {
+      NULL
+    }
+  })
+  
+  output$cor_year_range_ui <- renderUI({
+    if (input$cor_year_type == "Year Range") {
+      sliderInput("cor_year_range", "Select Year Range:", min = min(temp$year), max = max(temp$year),
+                  value = c(min(temp$year), max(temp$year)), step = 1)
+    } else {
+      NULL
+    }
+  })
+  
+  #filter data based on the selected year and season
+  filtered_data <- reactive({
+    data <- temp %>% filter(statistic == input$statistic)
+    
+    if (input$year_type == "Individual Years") {
+      data <- data %>% filter(year %in% input$year)
+    } else if (input$year_type == "Year Range") {
+      data <- data %>% filter(year >= input$year_range[1] & year <= input$year_range[2])
     }
     
-    #remove NA values
-    filtered_data <- filtered_data %>% filter(!is.na(temperature))
+    if (input$season != "All") {
+      data <- data %>% filter(season == input$season)
+    }
     
-    title_text <- paste(input$plot_type, "for", input$site)
+    data
+  })
+  
+  output$distPlot <- renderPlotly({
+    data <- filtered_data()
     
-    p <- ggplot(filtered_data, aes(x = temperature)) + 
+    title_text <- paste(input$plot_type, "for", input$site, "-", input$statistic, "-",
+                        if(input$year_type == "Individual Years") {
+                          paste("Year:", paste(input$year, collapse = ", "))
+                        } else {
+                          paste("Year Range:", paste(input$year_range[1], "-", input$year_range[2]))
+                        },
+                        "- Season:", input$season)
+    
+    p <- ggplot(data, aes(x = temperature)) + 
       theme_minimal()
     
     if (input$plot_type == "histogram") {
@@ -149,18 +331,43 @@ server <- function(input, output, session) {
     
     ggplotly(p)
   })
-
+  
   output$boxPlot <- renderPlotly({
-    if (input$comparison_type == "all") {
-      filtered_data <- temp
-      title_text <- "Boxplot for All Sites"
-    } else if (input$comparison_type == "compare") {
-      selected_sites <- sapply(seq_len(rv$num_sites), function(i) input[[paste0("site", i)]])
-      filtered_data <- temp %>% filter(site %in% selected_sites)
-      title_text <- paste("Boxplot Comparing Sites:", paste(selected_sites, collapse = ", "))
+    #filter data based on selected statistic, year, and season
+    data <- temp %>% filter(statistic == input$box_statistic)
+    
+    if (input$box_year_type == "Individual Years") {
+      data <- data %>% filter(year %in% input$box_year)
+    } else if (input$box_year_type == "Year Range") {
+      data <- data %>% filter(year >= input$box_year_range[1] & year <= input$box_year_range[2])
     }
     
-    p <- ggplot(filtered_data, aes(x = factor(site), y = temperature)) +
+    if (input$box_season != "All") {
+      data <- data %>% filter(season == input$box_season)
+    }
+    
+    if (input$comparison_type == "all") {
+      title_text <- paste("Boxplot for All Sites -", input$box_statistic, "-",
+                          if(input$box_year_type == "Individual Years") {
+                            paste("Year:", paste(input$box_year, collapse = ", "))
+                          } else {
+                            paste("Year Range:", paste(input$box_year_range[1], "-", input$box_year_range[2]))
+                          },
+                          "- Season:", input$box_season)
+    } else if (input$comparison_type == "compare") {
+      selected_sites <- sapply(seq_len(rv$num_sites), function(i) input[[paste0("site", i)]])
+      data <- data %>% filter(site %in% selected_sites)
+      title_text <- paste("Boxplot Comparing Sites:", paste(selected_sites, collapse = ", "),
+                          "- Statistic:", input$box_statistic, "-",
+                          if(input$box_year_type == "Individual Years") {
+                            paste("Year:", paste(input$box_year, collapse = ", "))
+                          } else {
+                            paste("Year Range:", paste(input$box_year_range[1], "-", input$box_year_range[2]))
+                          },
+                          "- Season:", input$box_season)
+    }
+    
+    p <- ggplot(data, aes(x = factor(site), y = temperature)) +
       geom_boxplot() +
       theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 8)) +  #rotate labels and reduce size
       labs(x = "Site")  #correct the x-axis label so it isn't "factor(site)"
@@ -169,9 +376,74 @@ server <- function(input, output, session) {
     
     ggplotly(p)
   })
+  
+  output$corMatrixPlot <- renderPlotly({
+    #filter data to select the appropriate "statistic", year(s), and season across all sites
+    data <- temp %>% filter(statistic == input$cor_statistic)
+    
+    if (input$cor_year_type == "Individual Years") {
+      data <- data %>% filter(year %in% input$cor_year)
+    } else if (input$cor_year_type == "Year Range") {
+      data <- data %>% filter(year >= input$cor_year_range[1] & year <= input$cor_year_range[2])
+    }
+    
+    if (input$cor_season != "All") {
+      data <- data %>% filter(season == input$cor_season)
+    }
+    
+    #pivot data to wider format, with sites as columns
+    wide_data <- data %>%
+      select(date, site, temperature) %>%
+      tidyr::pivot_wider(names_from = site, values_from = temperature) %>%
+      select(-date)
+    
+    #ensure all columns used for correlation are numeric
+    wide_data <- wide_data %>% mutate(across(everything(), as.numeric))
+    
+    #calculate correlation matrix
+    cor_matrix <- cor(wide_data, use = "complete.obs", method = input$cor_method)
+    
+    #apply correlation threshold
+    cor_matrix[abs(cor_matrix) < input$cor_threshold] <- NA  #setting below-threshold correlations to NA
+    
+    #convert correlation matrix to long format for ggplot
+    cor_data <- as.data.frame(as.table(cor_matrix))
+    
+    #ensure Var1 and Var2 are treated as factors
+    cor_data$Var1 <- as.factor(cor_data$Var1)
+    cor_data$Var2 <- as.factor(cor_data$Var2)
+    
+    #plot correlation matrix
+    title_text <- paste("Correlation Matrix using", input$cor_method, "method",
+                        "- Statistic:", input$cor_statistic, "-",
+                        if(input$cor_year_type == "Individual Years") {
+                          paste("Year:", paste(input$cor_year, collapse = ", "))
+                        } else {
+                          paste("Year Range:", paste(input$cor_year_range[1], "-", input$cor_year_range[2]))
+                        }, "- Season:", input$cor_season)
+    
+    p <- ggplot(cor_data, aes(x = Var1, y = Var2, fill = Freq)) +
+      geom_tile(color = "white", na.rm = TRUE) +
+      scale_fill_gradientn(colors = RColorBrewer::brewer.pal(11, input$color_scheme), na.value = "grey90") +
+      theme_minimal() +
+      labs(x = "Site", y = "Site", fill = "Correlation",
+           title = title_text) +
+      theme(axis.text.x = element_text(angle = 45, hjust = 1))
+    
+    if (input$show_values) {
+      p <- p + geom_text(aes(label = ifelse(is.na(Freq), "", round(Freq, 2))), size = 3)
+    }
+    
+    ggplotly(p)
+  })
 }
-
+                       
 shinyApp(ui = ui, server = server)
+
 ```
+
+
+
+
 
 
